# pypi-command-line

./: .gitignore  404.html  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  THANKS.md  TODO.md  index.html  mkdocs.yml  publish.ps1  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml
css/: custom.css
docs/: _config.yml  index.md  install.md  installation.md  notes.md  smart_features.md  testimonials.md  usage.md
docs/css/: custom.css
docs/js/: gif_script.js
install/: index.html
js/: gif_script.js
notes/: index.html
pypi_cli/: __init__.py  __main__.py
search/: search_index.json
smart_features/: index.html
testimonials/: index.html
tests/: conftest.py  requirements.txt  test_browse.py  test_description.py  test_information.py  test_largest_files.py  test_new_packages.py  test_new_releases.py  test_read_the_docs.py  test_regex_search.py  test_releases.py  test_search.py  test_version.py  test_wheels.py
usage/: index.html
