[metadata]
name = pypi-command-line
version = attr: pypi_cli.__version__
description=A beautiful command line interface for the Python Package Index
long_description = file: README.md
long_description_content_type =text/markdown
author = Wasi Master
author_email = arianmollik323@gmail.com
url = https://wasi-master.github.io/pypi-command-line/
project_urls=
    Bug Tracker = https://github.com/wasi-master/pypi-command-line/issues
    Source = https://github.com/wasi-master/pypi-command-line
    Documentation = https://wasi-master.github.io/pypi-command-line
    Say Thanks = https://saythanks.io/to/arianmollik323@gmail.com
keywords =
    pypi
    cli
    pypi cli
    pypi-cli
    pypi command line
    pypi-command-line
    command line
    command-line
    pypi command line interface
    pypi-command-line-interface
    command line interface
    command-line-interface
    pypi command line application
    pypi-command-line-application
    command line application
    command-line-application
    command line interface
    command-line-interface
    command line application
    command-line-application
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Topic :: Terminals

[options]
zip_safe = False
packages =
    pypi_cli
install_requires =
    typer
    rich
    requests
    humanize
    bs4
    questionary
    rich-rst
    packaging
    click-help-colors
    thefuzz

[options.entry_points]
console_scripts =
    pypi=pypi_cli.__main__:run
pipx.run =
    pypi-command-line=pypi_cli.__main__:run

[options.extras_require]
speedups=
    requests_cache  # For faster web requests
    shellingham  # For automatic terminal detection for typer
    lxml  # For faster html and xml parsing
    rapidfuzz  # For faster fuzzy matching
