[metadata]
name = pypi_command_line
version = attr: pypi_cli.__version__
description = A beautiful command line interface for the Python Package Index
long_description = file: README.md
long_description_content_type = text/markdown
url = https://wasi-master.github.io/pypi-command-line/
author = Wasi Master
author_email = arianmollik323@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Terminals
keywords =
    pypi
    cli
    pypi cli
    pypi-cli
    pypi command line
    pypi-command-line
    command line
    command-line
    pypi command line interface
    pypi-command-line-interface
    command line interface
    command-line-interface
    pypi command line application
    pypi-command-line-application
    command line application
    command-line-application
    command line interface
    command-line-interface
    command line application
    command-line-application
project_urls =
    Bug Tracker = https://github.com/wasi-master/pypi-command-line/issues
    Source = https://github.com/wasi-master/pypi-command-line
    Documentation = https://wasi-master.github.io/pypi-command-line
    Say Thanks = https://saythanks.io/to/wasi-master

[options]
packages =
    pypi_cli
install_requires =
    bs4
    click-help-colors
    humanize
    packaging
    questionary
    requests
    rich
    rich-rst
    thefuzz
    typer
    wheel-filename
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    pypi=pypi_cli.__main__:run
pipx.run =
    pypi-command-line=pypi_cli.__main__:run

[options.extras_require]
speedups =
    lxml
    rapidfuzz
    requests_cache
    shellingham
    ujson